--- a/slides/learning_strategies/01-learning_strat.html
+++ b/slides/learning_strategies/01-learning_strat.html
@@ -64,7 +64,7 @@ class: highlight-last-item
 - Please use the survey mode to answer the question ...
   - **What are you feeling right now ? (You can choose more than one option!)**
 --
-<div class="countdown" id="timer_622e5d31" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_62310d0e" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
