--- a/slides/learning_strategies/01-learning_strat.html
+++ b/slides/learning_strategies/01-learning_strat.html
@@ -4,6 +4,8 @@
     <title>From Theory to Practice: Teaching / Learning</title>
     <meta charset="utf-8" />
     <script src="libs/header-attrs-2.10/header-attrs.js"></script>
+    <link href="libs/countdown-0.3.5/countdown.css" rel="stylesheet" />
+    <script src="libs/countdown-0.3.5/countdown.js"></script>
     <link rel="stylesheet" href="F:/Desktop/akil_docs/drakileshr_git/bootcamper/slides/slides-style.css" type="text/css" />
     <link rel="stylesheet" href="F:/Desktop/akil_docs/drakileshr_git/bootcamper/slides/xaringan-themer.css" type="text/css" />
   </head>
@@ -33,41 +35,58 @@ __Akilesh Ramasamy__
 ]
 ]
 ---
-class: center, middle
-
-## About you?
-
----
 class: highlight-last-item
 
 ## Logistics
 
-- Everything in one place:[akileshr.github.io](http://akileshr.github.io)
-
---
-- Everything in one place: [localhost:8787](http://localhost:8787)
-  - Login: Your Employee ID  
-  - Password: Your Mobile Number (that you shared in the initial registration form)  
-
---
 - Asking for help: 
   - We will be using [partici.fi](http://partici.fi) for all our live interactions.
-  - Type in chat in Q &amp; A session (but if I don't see it, feel free to interrupt!)
+  - Type in chat in Q &amp; A session (but if I don't see it, feel free to interrupt!). 
   - Or just interrupt!
 ---
 # Hello Sensei
-
-&lt;img src="img/particify.png" width="100%" style="display: block; margin: auto;" /&gt;
+&lt;img src="img/particify.png" width="1001" height="80%" style="display: block; margin: auto;" /&gt;
+**https://partici.fi**            Enter the code: **2053 3883**
+---
+# Using Partici.fi (CODE: 20533883)
+&lt;img src="img/particify.png" width="1001" height="80%" /&gt;
+- Click on the 💬 Q &amp; A and Click on **"Leave a post"** OR **+**
+- Write a word/any short phrase in the Q &amp; A Chat box.
 
 --
-- Please use the survey mode to answer the question ...
-  - **What are you feeling right now ? (You can choose more than one option!)**
+- You can vote 👍&lt;span style="color: lightgreen;"&gt;^&lt;/span&gt; or vote down 👎&lt;span style="color: orange;"&gt;v&lt;/span&gt;  or remain neutral 😐(and)
+- you _can_ change your vote
 --
 
-```{ r }
+```r
+knitr::opts_chunk$set(warning = FALSE, message = FALSE) 
 library(countdown)
-countdown(minutes = 10)
+countdown(minutes = 3, play_sound = "../sound/ding.mp3", warn_when = 60)
 ```
+
+<div class="countdown" id="timer_62365c5a" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+</div>
+
+---
+# Using Partici.fi (CODE: 20533883)
+
+&lt;img src="img/particify.png" width="1001" height="80%" /&gt;
+
+- On the left side of screen, choose use the 📊 to enter into **survey mode**  
+  - **What are you feeling right now ?**
+  - _You can choose more than one option!_
+<div class="countdown" id="timer_62365a4d" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+</div>
+---
+# Using Partici.fi (CODE: 20533883)
+
+&lt;img src="img/particify.png" width="100%" /&gt;<div class="countdown" id="timer_62365caf" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="20">
+<code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+</div>
+- **Have you all understood the use of partici.fi?**  
+- On left side please choose `\({\\ }^👍{\\  }_👎\)`
 
 ---
 # Results
@@ -79,59 +98,83 @@ class: inverse, center, middle
 # Get Started
 
 ---
-
-# What do you understand by "active learning" ?
-
-.pull-left[
-- When was the last time 
-  - you "sat" in someone's class ? 
-  - some colleague else sat in your class ?
---
-- When was the last you saw your own class/presentation ?
-  - Zoom
-  - Live class recorded
-- When was the last time you had your teaching materials reviewed by someone else?
-]
-
-.pull-right[
-- Lesson Study
-
-- Learning Study
-]
-
----
-
-# Text Books
-
-
----
 # Metacognitive strategies
+
 - Fancy term for "thinking about cognitive skills"
+
 ---
 
 # Activity
+
 - All odd numbered persons turn around
 - Even number persons continue to watch the screen carefully
-&lt;video&gt;
+
 ---
 
 # All turn back
+
 - Odd numbered people answer the question on your screen (Even numbered people please wait)
+
 --
 - Even numbered people answer the question on your screen
+
+---
+class:middle, center
+
+# Dual coding
+.center[
+&lt;img src="img/ear.png" width="10%" height="10%" /&gt;&lt;img src="img/eye.png" width="10%" height="10%" /&gt;
+
+Use **two modes** of content delivery  
+]
 --
-- Use two modes of content delivery 
-  - Audio + visual.
-      - Visual can be text or image or both
-      - When using both, they must NOT repeat
-  - Audio must not repeat "ditto" what is on the screen
+.center[
+Audio + visual]
+--
+.center[
+  Spatio-temporally linked
+  non-repetitive
+]
+--
+.center[
+.pull-left[
+**Visual**  
+text, image  or both  
+]
+]
+--
+.center[
+.pull-left[
+**Image &amp; Text**  
+spatial proximity &amp; non-repetitive  
+]
+]
+--
+.center[
+.pull-left[
+  **Visual Presentation &amp; Audio**  
+    temporal proximity &amp; non-repetitive
+]
+]
+--
+.center[
+.pull-left[
+  **Complement** each other  
+    Non-repetitive
+]
+]
+
 ---
 
 # Lazy Teaching
+
 - What is better?
   - 80 % portion covered in class &amp; student studying 50% of taught lessons ?
   - 50% coverage and student gaining 80% of your taught lessons ?
---
+---
+
+# Insight into "learning"
+
 - Some difficulty is GOOD for learning for all students
 - MORE difficult is BETTER for learning for some students
 - MOST difficult is BEST for learning, but only a few manage
@@ -139,22 +182,80 @@ class: inverse, center, middle
 ---
 
 # Being inclusive and equitable
+
 - Three levels of lesson objectives in your objectives
+
+--
   - An ideal expected learning goal *Ideal*
+
 --
   - A bare minimum learning goal (for those on the edge of learning &amp; not learning) *Expected*
+
 --
   - A bar above the ideal (for those exemplar students) *Optional*
 ---
-![](01-learning_strat_files/figure-html/unnamed-chunk-3-1.png)&lt;!-- --&gt;
+
+# Activity 1: Active Learning
+
+- https://partici.fi (CODE: 20533883)  
+
+<div class="countdown" id="timer_62365ad8" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+</div>
+- **What do you understand by "active learning" ?**
+
+--
+- [Music](https://music.youtube.com/watch?v=2TvWZEVf6go&amp;list=RDAMVM2TvWZEVf6go]Music)  
+
 ---
-class: center, middle
 
-# Thanks!
+# Results
 
-Slides created via the R package [**xaringan**](https://github.com/yihui/xaringan).
+https://ars.particify.de/present/20533883
 
-The chakra comes from [remark.js](https://remarkjs.com), [**knitr**](https://yihui.org/knitr/), and [R Markdown](https://rmarkdown.rstudio.com).
+---
+
+# Text Books
+
+- **Do you suggest specific text-books and page numbers where to read something from ?**  
+- Do your students **know** how to read from a text-book?  
+- Book reading is an art ...
+- Make them **read** text-books**
+- Teach them to "skim" a topic **Before** class (PREVIEW)
+
+---
+
+# Study Cycle (Not to confuse with "learning cycle")
+
+- Preview 😎
+
+--
+- Attend Class 🏫
+
+--
+- Make Notes ✍️
+
+--
+- Paraphrase - Expand &amp; Condense 📚
+
+--
+- Review/Revise 🔖
+
+--
+- Test Oneself ⁉️
+
+--
+- Teach others 👨‍🏫 👩‍🎓
+
+---
+# Logistics (unused)
+
+- Everything in one place:[akileshr.github.io](http://akileshr.github.io)
+
+--
+- Everything in one place: [localhost:8787](http://localhost:8787)
+  - Login: Your Employee ID  
+  - Password: Your Mobile Number (that you shared in the initial registration form)  
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
