--- a/slides/learning_strategies/01-learning_strat.html
+++ b/slides/learning_strategies/01-learning_strat.html
@@ -3,17 +3,19 @@
   <head>
     <title>From Theory to Practice: Teaching / Learning</title>
     <meta charset="utf-8" />
-    <script src="libs/header-attrs-2.10/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.13/header-attrs.js"></script>
     <link href="libs/countdown-0.3.5/countdown.css" rel="stylesheet" />
     <script src="libs/countdown-0.3.5/countdown.js"></script>
-    <link rel="stylesheet" href="F:/Desktop/akil_docs/drakileshr_git/bootcamper/slides/slides-style.css" type="text/css" />
-    <link rel="stylesheet" href="F:/Desktop/akil_docs/drakileshr_git/bootcamper/slides/xaringan-themer.css" type="text/css" />
+    <link rel="stylesheet" href="../slides-style.css" type="text/css" />
+    <link rel="stylesheet" href="../xaringan-themer.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
+.title[
 # From Theory to Practice: Teaching / Learning
+]
 
 ---
 
@@ -64,7 +66,7 @@ library(countdown)
 countdown(minutes = 3, play_sound = "../sound/ding.mp3", warn_when = 60)
 ```
 
-<div class="countdown" id="timer_62365c5a" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<div class="countdown" id="timer_6237bee5" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -76,13 +78,13 @@ countdown(minutes = 3, play_sound = "../sound/ding.mp3", warn_when = 60)
 - On the left side of screen, choose use the 📊 to enter into **survey mode**  
   - **What are you feeling right now ?**
   - _You can choose more than one option!_
-<div class="countdown" id="timer_62365a4d" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<div class="countdown" id="timer_6237c03c" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 ---
 # Using Partici.fi (CODE: 20533883)
 
-&lt;img src="img/particify.png" width="100%" /&gt;<div class="countdown" id="timer_62365caf" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="20">
+&lt;img src="img/particify.png" width="100%" /&gt;<div class="countdown" id="timer_6237c138" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="20">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 - **Have you all understood the use of partici.fi?**  
@@ -199,7 +201,7 @@ spatial proximity &amp; non-repetitive
 
 - https://partici.fi (CODE: 20533883)  
 
-<div class="countdown" id="timer_62365ad8" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<div class="countdown" id="timer_6237c126" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 - **What do you understand by "active learning" ?**
@@ -245,7 +247,7 @@ https://ars.particify.de/present/20533883
 - Test Oneself ⁉️
 
 --
-- Teach others 👨‍🏫 👩‍🎓
+- Teach others 👩‍🏫 👨‍🎓
 
 ---
 # Logistics (unused)
@@ -258,7 +260,7 @@ https://ars.particify.de/present/20533883
   - Password: Your Mobile Number (that you shared in the initial registration form)  
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
-<script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
+<script src="libs/remark-latest.min.js"></script>
 <script>var slideshow = remark.create({
 "highlightStyle": "solarized-light",
 "highlightLines": true,
@@ -305,6 +307,19 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
