--- a/slides/learning_strategies/01-learning_strat.html
+++ b/slides/learning_strategies/01-learning_strat.html
@@ -66,7 +66,7 @@ library(countdown)
 countdown(minutes = 3, play_sound = "../sound/ding.mp3", warn_when = 60)
 ```
 
-<div class="countdown" id="timer_6237bee5" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<div class="countdown" id="timer_6237c198" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -78,13 +78,13 @@ countdown(minutes = 3, play_sound = "../sound/ding.mp3", warn_when = 60)
 - On the left side of screen, choose use the 📊 to enter into **survey mode**  
   - **What are you feeling right now ?**
   - _You can choose more than one option!_
-<div class="countdown" id="timer_6237c03c" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<div class="countdown" id="timer_6237bedc" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 ---
 # Using Partici.fi (CODE: 20533883)
 
-&lt;img src="img/particify.png" width="100%" /&gt;<div class="countdown" id="timer_6237c138" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="20">
+&lt;img src="img/particify.png" width="100%" /&gt;<div class="countdown" id="timer_6237be40" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="20">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 - **Have you all understood the use of partici.fi?**  
@@ -201,7 +201,7 @@ spatial proximity &amp; non-repetitive
 
 - https://partici.fi (CODE: 20533883)  
 
-<div class="countdown" id="timer_6237c126" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<div class="countdown" id="timer_6237c163" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 - **What do you understand by "active learning" ?**
@@ -247,7 +247,7 @@ https://ars.particify.de/present/20533883
 - Test Oneself ⁉️
 
 --
-- Teach others 👩‍🏫 👨‍🎓
+- Teach others 👩‍🏫 👩‍🎓
 
 ---
 # Logistics (unused)
