--- a/slides/learning_strategies/01-learning_strat.html
+++ b/slides/learning_strategies/01-learning_strat.html
@@ -3,19 +3,17 @@
   <head>
     <title>From Theory to Practice: Teaching / Learning</title>
     <meta charset="utf-8" />
-    <script src="libs/header-attrs-2.13/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.10/header-attrs.js"></script>
     <link href="libs/countdown-0.3.5/countdown.css" rel="stylesheet" />
     <script src="libs/countdown-0.3.5/countdown.js"></script>
-    <link rel="stylesheet" href="../slides-style.css" type="text/css" />
-    <link rel="stylesheet" href="../xaringan-themer.css" type="text/css" />
+    <link rel="stylesheet" href="E:/bootcamper/slides/slides-style.css" type="text/css" />
+    <link rel="stylesheet" href="E:/bootcamper/slides/xaringan-themer.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-.title[
 # From Theory to Practice: Teaching / Learning
-]
 
 ---
 
@@ -39,26 +37,28 @@ __Akilesh Ramasamy__
 ---
 class: highlight-last-item
 
-## Logistics
+## Hello Senpai!
 
 - Asking for help: 
   - We will be using [partici.fi](http://partici.fi) for all our live interactions.
   - Type in chat in Q &amp; A session (but if I don't see it, feel free to interrupt!). 
   - Or just interrupt!
 ---
-# Hello Sensei
-&lt;img src="img/particify.png" width="1001" height="80%" style="display: block; margin: auto;" /&gt;
-**https://partici.fi**            Enter the code: **2053 3883**
----
 # Using Partici.fi (CODE: 20533883)
 &lt;img src="img/particify.png" width="1001" height="80%" /&gt;
-- Click on the 💬 Q &amp; A and Click on **"Leave a post"** OR **+**
-- Write a word/any short phrase in the Q &amp; A Chat box.
-
+.pull-left[
+- Click on the .darkpink[.thick[🗨️ Q &amp; A]] and Click on .darkpink[.thick["Leave a Post"]] OR .darkpink[.thick[+]]
+- Write a word/any short phrase in the .darkpink[.thick[💬 Q &amp; A]] Chat box.
+]
 --
-- You can vote 👍&lt;span style="color: lightgreen;"&gt;^&lt;/span&gt; or vote down 👎&lt;span style="color: orange;"&gt;v&lt;/span&gt;  or remain neutral 😐(and)
+.pull-left[
+- You can vote up👍 .lightgreen[.thick[^]] _or_
+.orange[.thick[vote down 👎v]]  or 
+remain neutral 😐(and)
 - you _can_ change your vote
+]
 --
+
 
 ```r
 knitr::opts_chunk$set(warning = FALSE, message = FALSE) 
@@ -66,30 +66,33 @@ library(countdown)
 countdown(minutes = 3, play_sound = "../sound/ding.mp3", warn_when = 60)
 ```
 
-<div class="countdown" id="timer_6237c198" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<div class="countdown" id="timer_623847a6" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
 ---
 # Using Partici.fi (CODE: 20533883)
-
-&lt;img src="img/particify.png" width="1001" height="80%" /&gt;
-
+.center[
+&lt;img src="img/particify.png" width="1001" height="80%" /&gt;<div class="countdown" id="timer_623849f2" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+</div>
+]
+.pull-left-wide[
 - On the left side of screen, choose use the 📊 to enter into **survey mode**  
   - **What are you feeling right now ?**
   - _You can choose more than one option!_
-<div class="countdown" id="timer_6237bedc" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
-<code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
-</div>
+]
 ---
 # Using Partici.fi (CODE: 20533883)
-
-&lt;img src="img/particify.png" width="100%" /&gt;<div class="countdown" id="timer_6237be40" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="20">
+.center[
+&lt;img src="img/particify.png" width="80%" /&gt;<div class="countdown" id="timer_62384a3e" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="20">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
+]
+.pull-left-wide[
 - **Have you all understood the use of partici.fi?**  
 - On left side please choose `\({\\ }^👍{\\  }_👎\)`
-
+]
 ---
 # Results
 
@@ -201,7 +204,7 @@ spatial proximity &amp; non-repetitive
 
 - https://partici.fi (CODE: 20533883)  
 
-<div class="countdown" id="timer_6237c163" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<div class="countdown" id="timer_623849c7" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 - **What do you understand by "active learning" ?**
@@ -247,7 +250,7 @@ https://ars.particify.de/present/20533883
 - Test Oneself ⁉️
 
 --
-- Teach others 👩‍🏫 👩‍🎓
+- Teach others 👩‍🏫 👨‍🎓
 
 ---
 # Logistics (unused)
@@ -307,19 +310,6 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
-// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
-// screen reader (see PR #262)
-(function(d) {
-  let res = {};
-  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
-    const t = tr.querySelector('td:nth-child(2)').innerText;
-    tr.querySelectorAll('td:first-child .key').forEach(key => {
-      const k = key.innerText;
-      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
-    });
-  });
-  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
-})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
