--- a/slides/learning_strategies/01-learning_strat.html
+++ b/slides/learning_strategies/01-learning_strat.html
@@ -44,11 +44,11 @@ class: highlight-last-item
   - Type in chat in Q &amp; A session (but if I don't see it, feel free to interrupt!). 
   - Or just interrupt!
 ---
-# Using Partici.fi (CODE: 20533883)
+# Using Partici.fi (CODE: 20533883) - Q&amp;A Mode
 &lt;img src="img/particify.png" width="1001" height="80%" /&gt;
 .pull-left[
 - Click on the .darkpink[.thick[🗨️ Q &amp; A]] and Click on .darkpink[.thick["Leave a Post"]] OR .darkpink[.thick[+]]
-- Write a word/any short phrase in the .darkpink[.thick[💬 Q &amp; A]] Chat box.
+- Write a word/any short phrase in the .darkpink[.thick[🗨️ Q &amp; A]] Chat box.
 ]
 --
 .pull-left[
@@ -66,14 +66,14 @@ library(countdown)
 countdown(minutes = 3, play_sound = "../sound/ding.mp3", warn_when = 60)
 ```
 
-<div class="countdown" id="timer_623847a6" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<div class="countdown" id="timer_623866bf" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
 ---
-# Using Partici.fi (CODE: 20533883)
+# Using Partici.fi (CODE: 20533883) - Survey Mode!
 .center[
-&lt;img src="img/particify.png" width="1001" height="80%" /&gt;<div class="countdown" id="timer_623849f2" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+&lt;img src="img/particify.png" width="1001" height="80%" /&gt;<div class="countdown" id="timer_6238640a" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 ]
@@ -83,15 +83,18 @@ countdown(minutes = 3, play_sound = "../sound/ding.mp3", warn_when = 60)
   - _You can choose more than one option!_
 ]
 ---
-# Using Partici.fi (CODE: 20533883)
+# Using Partici.fi (CODE: 20533883) - Live poll!
 .center[
-&lt;img src="img/particify.png" width="80%" /&gt;<div class="countdown" id="timer_62384a3e" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="20">
+&lt;img src="img/particify.png" width="80%" /&gt;<div class="countdown" id="timer_6238648d" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="20">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 ]
 .pull-left-wide[
+- Please choose `\({\\ }^👍{\\  }_👎\)`
+]
+--
+.pull-left-wide[
 - **Have you all understood the use of partici.fi?**  
-- On left side please choose `\({\\ }^👍{\\  }_👎\)`
 ]
 ---
 # Results
@@ -101,36 +104,46 @@ https://ars.particify.de/present/20533883
 class: inverse, center, middle
 
 # Get Started
+---
+class: inverse, center, middle
+# Your Turn
+
+<div class="countdown" id="timer_6238646e" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+</div>
+
+- partici.fi CODE: 20533883 (SURVEY/QUIZ MODE)
+
+--
+- Post your responses to the question
+- **"What fosters efficient self-learning among medical students?"**
 
 ---
 # Metacognitive strategies
 
-- Fancy term for "thinking about cognitive skills"
+- "Thinking about thinking"
+- Probing into "why's" they are learning
+- Awareness of how &amp; what they are learning
+- An evaluation of individual learning needs
+- Generating strategies to meet the needs 
+- Implementing the strategies
+- Monitoring, evaluating and modifying dynamically and contextually
 
 ---
+# Why metacognitive strategies?
 
-# Activity
-
-- All odd numbered persons turn around
-- Even number persons continue to watch the screen carefully
-
----
-
-# All turn back
-
-- Odd numbered people answer the question on your screen (Even numbered people please wait)
-
---
-- Even numbered people answer the question on your screen
-
----
+- Learners show self-confidence
+- Crucial for independent learning
+- Self-efficacy improves.
+- Fosters forethought &amp; self-reflection
+- All these fosters self-regulated learning
 class:middle, center
 
 # Dual coding
 .center[
 &lt;img src="img/ear.png" width="10%" height="10%" /&gt;&lt;img src="img/eye.png" width="10%" height="10%" /&gt;
 
-Use **two modes** of content delivery  
+Use **two modes** of content delivery with spatio-temporal proximity.  
 ]
 --
 .center[
@@ -173,9 +186,10 @@ spatial proximity &amp; non-repetitive
 
 # Lazy Teaching
 
-- What is better?
-  - 80 % portion covered in class &amp; student studying 50% of taught lessons ?
-  - 50% coverage and student gaining 80% of your taught lessons ?
+- Two situations will be suggested below. Think for 30 seconds before answering in the poll.
+(A) 80 % portion covered in class &amp; student studying 50% of taught lessons ?
+(B) 50% of portions covered in class &amp; student gaining 80% of your lessons taught ?
+
 ---
 
 # Insight into "learning"
@@ -204,7 +218,7 @@ spatial proximity &amp; non-repetitive
 
 - https://partici.fi (CODE: 20533883)  
 
-<div class="countdown" id="timer_623849c7" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<div class="countdown" id="timer_62386634" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 - **What do you understand by "active learning" ?**
