--- a/slides/learning_strategies/01-learning_strat.html
+++ b/slides/learning_strategies/01-learning_strat.html
@@ -3,17 +3,19 @@
   <head>
     <title>From Theory to Practice: Teaching / Learning</title>
     <meta charset="utf-8" />
-    <script src="libs/header-attrs-2.10/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.13/header-attrs.js"></script>
     <link href="libs/countdown-0.3.5/countdown.css" rel="stylesheet" />
     <script src="libs/countdown-0.3.5/countdown.js"></script>
-    <link rel="stylesheet" href="E:/bootcamper/slides/slides-style.css" type="text/css" />
-    <link rel="stylesheet" href="E:/bootcamper/slides/xaringan-themer.css" type="text/css" />
+    <link rel="stylesheet" href="../slides-style.css" type="text/css" />
+    <link rel="stylesheet" href="../xaringan-themer.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
+.title[
 # From Theory to Practice: Teaching / Learning
+]
 
 ---
 
@@ -66,14 +68,14 @@ library(countdown)
 countdown(minutes = 3, play_sound = "../sound/ding.mp3", warn_when = 60)
 ```
 
-<div class="countdown" id="timer_623866bf" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<div class="countdown" id="timer_623894b7" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
 ---
 # Using Partici.fi (CODE: 20533883) - Survey Mode!
 .center[
-&lt;img src="img/particify.png" width="1001" height="80%" /&gt;<div class="countdown" id="timer_6238640a" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+&lt;img src="img/particify.png" width="1001" height="80%" /&gt;<div class="countdown" id="timer_6238936d" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 ]
@@ -85,7 +87,7 @@ countdown(minutes = 3, play_sound = "../sound/ding.mp3", warn_when = 60)
 ---
 # Using Partici.fi (CODE: 20533883) - Live poll!
 .center[
-&lt;img src="img/particify.png" width="80%" /&gt;<div class="countdown" id="timer_6238648d" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="20">
+&lt;img src="img/particify.png" width="80%" /&gt;<div class="countdown" id="timer_62389310" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="20">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 ]
@@ -108,7 +110,7 @@ class: inverse, center, middle
 class: inverse, center, middle
 # Your Turn
 
-<div class="countdown" id="timer_6238646e" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<div class="countdown" id="timer_623893e5" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -218,7 +220,7 @@ spatial proximity &amp; non-repetitive
 
 - https://partici.fi (CODE: 20533883)  
 
-<div class="countdown" id="timer_62386634" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<div class="countdown" id="timer_62389239" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 - **What do you understand by "active learning" ?**
@@ -324,6 +326,19 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
