--- a/slides/learning_strategies/01-learning_strat.html
+++ b/slides/learning_strategies/01-learning_strat.html
@@ -49,8 +49,8 @@ class: highlight-last-item
 # Using Partici.fi (CODE: 20533883) - Q&amp;A Mode
 &lt;img src="img/particify.png" width="1001" height="80%" /&gt;
 .pull-left[
-- Click on the .darkpink[.thick[🗨️ Q &amp; A]] and Click on .darkpink[.thick["Leave a Post"]] OR .darkpink[.thick[+]]
-- Write a word/any short phrase in the .darkpink[.thick[🗨️ Q &amp; A]] Chat box.
+- Click on the .darkpink[.thick[💬 Q &amp; A]] and Click on .darkpink[.thick["Leave a Post"]] OR .darkpink[.thick[+]]
+- Write a word/any short phrase in the .darkpink[.thick[💬 Q &amp; A]] Chat box.
 ]
 --
 .pull-left[
@@ -68,14 +68,14 @@ library(countdown)
 countdown(minutes = 3, play_sound = "../sound/ding.mp3", warn_when = 60)
 ```
 
-<div class="countdown" id="timer_623894b7" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<div class="countdown" id="timer_62389800" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
 ---
 # Using Partici.fi (CODE: 20533883) - Survey Mode!
 .center[
-&lt;img src="img/particify.png" width="1001" height="80%" /&gt;<div class="countdown" id="timer_6238936d" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+&lt;img src="img/particify.png" width="1001" height="80%" /&gt;<div class="countdown" id="timer_623895de" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 ]
@@ -87,7 +87,7 @@ countdown(minutes = 3, play_sound = "../sound/ding.mp3", warn_when = 60)
 ---
 # Using Partici.fi (CODE: 20533883) - Live poll!
 .center[
-&lt;img src="img/particify.png" width="80%" /&gt;<div class="countdown" id="timer_62389310" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="20">
+&lt;img src="img/particify.png" width="80%" /&gt;<div class="countdown" id="timer_62389893" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="20">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 ]
@@ -110,7 +110,7 @@ class: inverse, center, middle
 class: inverse, center, middle
 # Your Turn
 
-<div class="countdown" id="timer_623893e5" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<div class="countdown" id="timer_623898c2" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -220,7 +220,7 @@ spatial proximity &amp; non-repetitive
 
 - https://partici.fi (CODE: 20533883)  
 
-<div class="countdown" id="timer_62389239" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<div class="countdown" id="timer_62389619" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 - **What do you understand by "active learning" ?**
@@ -266,7 +266,7 @@ https://ars.particify.de/present/20533883
 - Test Oneself ⁉️
 
 --
-- Teach others 👩‍🏫 👨‍🎓
+- Teach others 👨‍🏫 👨‍🎓
 
 ---
 # Logistics (unused)
