learning strategies updated

--- a/slides/learning_strategies/01-learning_strat.html
+++ b/slides/learning_strategies/01-learning_strat.html
@@ -8,6 +8,7 @@
     <script src="libs/countdown-0.3.5/countdown.js"></script>
     <link rel="stylesheet" href="../slides-style.css" type="text/css" />
     <link rel="stylesheet" href="../xaringan-themer.css" type="text/css" />
+    <link rel="stylesheet" href="../custom.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
@@ -46,7 +47,7 @@ class: highlight-last-item
   - Type in chat in Q &amp; A session (but if I don't see it, feel free to interrupt!). 
   - Or just interrupt!
 ---
-# Using Partici.fi (CODE: 20533883) - Q&amp;A Mode
+## Using Partici.fi (CODE: 20533883) - Q&amp;A Mode
 &lt;img src="img/particify.png" width="1001" height="80%" /&gt;
 .pull-left[
 - Click on the .darkpink[.thick[💬 Q &amp; A]] and Click on .darkpink[.thick["Leave a Post"]] OR .darkpink[.thick[+]]
@@ -60,22 +61,15 @@ remain neutral 😐(and)
 - you _can_ change your vote
 ]
 --
-
-
-```r
-knitr::opts_chunk$set(warning = FALSE, message = FALSE) 
-library(countdown)
-countdown(minutes = 3, play_sound = "../sound/ding.mp3", warn_when = 60)
-```
-
-<div class="countdown" id="timer_62389800" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+.pull-right-narrow[
+<div class="countdown" id="timer_6238d4ff" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
-
+]
 ---
-# Using Partici.fi (CODE: 20533883) - Survey Mode!
+## Using Partici.fi (CODE: 20533883) - Survey Mode!
 .center[
-&lt;img src="img/particify.png" width="1001" height="80%" /&gt;<div class="countdown" id="timer_623895de" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+&lt;img src="img/particify.png" width="1001" height="80%" /&gt;<div class="countdown" id="timer_6238d509" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 ]
@@ -85,9 +79,9 @@ countdown(minutes = 3, play_sound = "../sound/ding.mp3", warn_when = 60)
   - _You can choose more than one option!_
 ]
 ---
-# Using Partici.fi (CODE: 20533883) - Live poll!
+## Using Partici.fi (CODE: 20533883) - Live poll!
 .center[
-&lt;img src="img/particify.png" width="80%" /&gt;<div class="countdown" id="timer_62389893" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="20">
+&lt;img src="img/particify.png" width="80%" /&gt;<div class="countdown" id="timer_6238d482" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="20">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 ]
@@ -99,7 +93,7 @@ countdown(minutes = 3, play_sound = "../sound/ding.mp3", warn_when = 60)
 - **Have you all understood the use of partici.fi?**  
 ]
 ---
-# Results
+## Results
 
 https://ars.particify.de/present/20533883
 ---
@@ -107,41 +101,50 @@ class: inverse, center, middle
 
 # Get Started
 ---
-class: inverse, center, middle
+class: center, middle
 # Your Turn
 
-<div class="countdown" id="timer_623898c2" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<div class="countdown" id="timer_6238d2a7" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
-- partici.fi CODE: 20533883 (SURVEY/QUIZ MODE)
+- partici.fi CODE: 20533883 (Survey/Quiz Mode)
 
 --
 - Post your responses to the question
-- **"What fosters efficient self-learning among medical students?"**
-
+.discussion[
+- .darkpink["What fosters efficient self-learning among medical students?"]
+]
 ---
-# Metacognitive strategies
+class:doublespace
+
+## Metacognitive strategies
 
 - "Thinking about thinking"
+--
 - Probing into "why's" they are learning
 - Awareness of how &amp; what they are learning
+--
 - An evaluation of individual learning needs
 - Generating strategies to meet the needs 
 - Implementing the strategies
+--
 - Monitoring, evaluating and modifying dynamically and contextually
 
 ---
-# Why metacognitive strategies?
+class:doublespace
 
-- Learners show self-confidence
+## Why metacognitive strategies?
+
+- Learners show **self-confidence**
 - Crucial for independent learning
-- Self-efficacy improves.
-- Fosters forethought &amp; self-reflection
+- **Self-efficacy** improves.
+- Fosters **forethought &amp; self-reflection**
 - All these fosters self-regulated learning
-class:middle, center
 
-# Dual coding
+---
+
+## Dual coding
 .center[
 &lt;img src="img/ear.png" width="10%" height="10%" /&gt;&lt;img src="img/eye.png" width="10%" height="10%" /&gt;
 
@@ -149,7 +152,7 @@ Use **two modes** of content delivery with spatio-temporal proximity.
 ]
 --
 .center[
-Audio + visual]
+**Audio** + .darkpink[.thick[visual]]]
 --
 .center[
   Spatio-temporally linked
@@ -157,42 +160,51 @@ Audio + visual]
 ]
 --
 .center[
-.pull-left[
+.pull-left[.left[
 **Visual**  
 text, image  or both  
 ]
 ]
+]
 --
 .center[
-.pull-left[
+.pull-right[.left[
 **Image &amp; Text**  
 spatial proximity &amp; non-repetitive  
 ]
 ]
+]
 --
 .center[
-.pull-left[
+.pull-left[.left[
   **Visual Presentation &amp; Audio**  
     temporal proximity &amp; non-repetitive
 ]
 ]
+]
 --
 .center[
-.pull-left[
+.pull-right[.left[
   **Complement** each other  
     Non-repetitive
 ]
 ]
+]
 
 ---
+class:doublespace
 
-# Lazy Teaching
+## Lazy Teaching
 
 - Two situations will be suggested below. Think for 30 seconds before answering in the poll.
-(A) 80 % portion covered in class &amp; student studying 50% of taught lessons ?
-(B) 50% of portions covered in class &amp; student gaining 80% of your lessons taught ?
-
+.discussion[
+  - (A) 80 % portion covered in class &amp; student studying 50% of taught lessons ?
+]
+.discussion[
+  - (B) 50% of portions covered in class &amp; student gaining 80% of your lessons taught ?
+]
 ---
+class:doublespace
 
 # Insight into "learning"
 
@@ -201,6 +213,7 @@ spatial proximity &amp; non-repetitive
 - MOST difficult is BEST for learning, but only a few manage
 
 ---
+class:doublespace
 
 # Being inclusive and equitable
 
@@ -220,7 +233,7 @@ spatial proximity &amp; non-repetitive
 
 - https://partici.fi (CODE: 20533883)  
 
-<div class="countdown" id="timer_62389619" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<div class="countdown" id="timer_6238d377" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 - **What do you understand by "active learning" ?**
@@ -235,6 +248,7 @@ spatial proximity &amp; non-repetitive
 https://ars.particify.de/present/20533883
 
 ---
+class:doublespace
 
 # Text Books
 
@@ -266,12 +280,12 @@ https://ars.particify.de/present/20533883
 - Test Oneself ⁉️
 
 --
-- Teach others 👨‍🏫 👨‍🎓
+- Teach others 👨‍🏫 👩‍🎓
 
 ---
 # Logistics (unused)
 
-- Everything in one place:[akileshr.github.io](http://akileshr.github.io)
+- Everything in one place:[drakileshr.github.io](http://drakileshr.github.io/bootcamper/slides/learning-strategies/01-learning_strat.html)
 
 --
 - Everything in one place: [localhost:8787](http://localhost:8787)
