--- a/slides/learning_strategies/01-learning_strat.html
+++ b/slides/learning_strategies/01-learning_strat.html
@@ -38,14 +38,17 @@ __Akilesh Ramasamy__
 ]
 ]
 ---
-class: highlight-last-item
+class: highlight-last-item, doublespace
 
 ## Hello Senpai!
 
-- Asking for help: 
+.pull-left-wide[.large[
+- Asking for help:
   - We will be using [partici.fi](http://partici.fi) for all our live interactions.
-  - Type in chat in Q &amp; A session (but if I don't see it, feel free to interrupt!). 
-  - Or just interrupt!
+  - Type in chat in Q &amp; A session
+  - But if I don't see it, just interrupt!
+]]
+
 ---
 ## Using Partici.fi (CODE: 20533883) - Q&amp;A Mode
 &lt;img src="img/particify.png" width="1001" height="80%" /&gt;
@@ -55,21 +58,21 @@ class: highlight-last-item
 ]
 --
 .pull-left[
-- You can vote up👍 .lightgreen[.thick[^]] _or_
-.orange[.thick[vote down 👎v]]  or 
-remain neutral 😐(and)
+- You can vote up👍 .lightgreen[.thick[^]] _or_  
+vote down 👎.orange[.thick[v]]  _or_  
+remain neutral 😐
 - you _can_ change your vote
 ]
 --
 .pull-right-narrow[
-<div class="countdown" id="timer_6238d4ff" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<div class="countdown" id="timer_623a2fb7" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 ]
 ---
 ## Using Partici.fi (CODE: 20533883) - Survey Mode!
 .center[
-&lt;img src="img/particify.png" width="1001" height="80%" /&gt;<div class="countdown" id="timer_6238d509" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+&lt;img src="img/particify.png" width="1001" height="80%" /&gt;<div class="countdown" id="timer_623a2f28" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 ]
@@ -81,7 +84,7 @@ remain neutral 😐(and)
 ---
 ## Using Partici.fi (CODE: 20533883) - Live poll!
 .center[
-&lt;img src="img/particify.png" width="80%" /&gt;<div class="countdown" id="timer_6238d482" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="20">
+&lt;img src="img/particify.png" width="80%" /&gt;<div class="countdown" id="timer_623a2e1e" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="20">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 ]
@@ -101,20 +104,19 @@ class: inverse, center, middle
 
 # Get Started
 ---
-class: center, middle
-# Your Turn
+class: center, middle, doublespace
+## Your Turn
 
-<div class="countdown" id="timer_6238d2a7" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<div class="countdown" id="timer_623a2ca5" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
-
-- partici.fi CODE: 20533883 (Survey/Quiz Mode)
+partici.fi CODE: 20533883 -&gt; 📊 Quiz mode
 
 --
-- Post your responses to the question
+Post your response to the question
 .discussion[
-- .darkpink["What fosters efficient self-learning among medical students?"]
-]
+.darkpink[.thick["What fosters self-learning among medical students?"]
+]]
 ---
 class:doublespace
 
@@ -126,7 +128,7 @@ class:doublespace
 - Awareness of how &amp; what they are learning
 --
 - An evaluation of individual learning needs
-- Generating strategies to meet the needs 
+- Generating strategies to meet the needs
 - Implementing the strategies
 --
 - Monitoring, evaluating and modifying dynamically and contextually
@@ -143,7 +145,25 @@ class:doublespace
 - All these fosters self-regulated learning
 
 ---
+class: top, doublespace
+## Your Turn!
 
+<div class="countdown" id="timer_623a3054" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="20">
+<code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+</div>
+
+Please pick the paper at the end of your table. Take one and pass it along to your neighbour!
+
+--
+.center[
+Start at the top left of the page ...
+
+.discussion[
+.darkpink[.thick["What is the worst that someone can say about your teaching  
+and it may still have some truth in it?"]
+]]
+]
+---
 ## Dual coding
 .center[
 &lt;img src="img/ear.png" width="10%" height="10%" /&gt;&lt;img src="img/eye.png" width="10%" height="10%" /&gt;
@@ -196,17 +216,21 @@ class:doublespace
 
 ## Lazy Teaching
 
-- Two situations will be suggested below. Think for 30 seconds before answering in the poll.
-.discussion[
-  - (A) 80 % portion covered in class &amp; student studying 50% of taught lessons ?
+- Think for 30 seconds. 
+.discussion[+ (A) 80 % portion covered in class &amp; student studying 50% of taught lessons ?
 ]
-.discussion[
-  - (B) 50% of portions covered in class &amp; student gaining 80% of your lessons taught ?
+.discussion[+ (B) 50% of portions covered in class &amp; student gaining 80% of your lessons taught ?
 ]
+--
+- Present a justification to your answer for 30 - 60 seconds to your neighbour
+
+<div class="countdown" id="timer_623a2e90" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="10">
+<code class="countdown-time"><span class="countdown-digits minutes">00</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
+</div>
 ---
 class:doublespace
 
-# Insight into "learning"
+## Insight into "learning"
 
 - Some difficulty is GOOD for learning for all students
 - MORE difficult is BETTER for learning for some students
@@ -215,7 +239,7 @@ class:doublespace
 ---
 class:doublespace
 
-# Being inclusive and equitable
+## Being inclusive and equitable
 
 - Three levels of lesson objectives in your objectives
 
@@ -229,11 +253,11 @@ class:doublespace
   - A bar above the ideal (for those exemplar students) *Optional*
 ---
 
-# Activity 1: Active Learning
+## Activity 1: Active Learning
 
 - https://partici.fi (CODE: 20533883)  
 
-<div class="countdown" id="timer_6238d377" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<div class="countdown" id="timer_623a2cc9" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 - **What do you understand by "active learning" ?**
@@ -250,7 +274,7 @@ https://ars.particify.de/present/20533883
 ---
 class:doublespace
 
-# Text Books
+## Text Books
 
 - **Do you suggest specific text-books and page numbers where to read something from ?**  
 - Do your students **know** how to read from a text-book?  
@@ -259,8 +283,9 @@ class:doublespace
 - Teach them to "skim" a topic **Before** class (PREVIEW)
 
 ---
+class:doublespace
 
-# Study Cycle (Not to confuse with "learning cycle")
+## Study Cycle (Not to confuse with "learning cycle")
 
 - Preview 😎
 
@@ -280,7 +305,7 @@ class:doublespace
 - Test Oneself ⁉️
 
 --
-- Teach others 👨‍🏫 👩‍🎓
+- Teach others 👩‍🏫 👨‍🎓
 
 ---
 # Logistics (unused)
