--- a/slides/learning_strategies/01-learning_strat.html
+++ b/slides/learning_strategies/01-learning_strat.html
@@ -6,9 +6,9 @@
     <script src="libs/header-attrs-2.10/header-attrs.js"></script>
     <link href="libs/countdown-0.3.5/countdown.css" rel="stylesheet" />
     <script src="libs/countdown-0.3.5/countdown.js"></script>
-    <link rel="stylesheet" href="../../slides-style.css" type="text/css" />
-    <link rel="stylesheet" href="../../xaringan-themer.css" type="text/css" />
-    <link rel="stylesheet" href="../../custom.css" type="text/css" />
+    <link rel="stylesheet" href="../../slides/slides-style.css" type="text/css" />
+    <link rel="stylesheet" href="../../slides/xaringan-themer.css" type="text/css" />
+    <link rel="stylesheet" href="../../slides/custom.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
